// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button matches snapshots Icon only displayStyle: 2 size: undefined disabled: false 1`] = `
<button
  class="sc-AxgMl efzdiw"
  size="2"
  type="button"
/>
`;

exports[`Button matches snapshots Icon only displayStyle: 3 size: undefined disabled: false 1`] = `
<button
  class="sc-AxgMl dbouKv"
  size="2"
  type="button"
/>
`;

exports[`Button matches snapshots Icon only displayStyle: 4 size: undefined disabled: false 1`] = `
<button
  class="sc-AxgMl bYhxFk"
  size="2"
  type="button"
/>
`;

exports[`Button matches snapshots Links displayStyle: 5 size: undefined disabled: false 1`] = `
<button
  class="sc-AxgMl dfosmN"
  size="2"
  type="button"
>
  <p
    class="sc-AxjAm pMKRu sc-Axmtr fhTfIi"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 5 size: undefined disabled: false 2`] = `
<a
  class="sc-AxhUy kKWhET"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <div
    class="sc-AxirZ btYaIv sc-AxheI kuvChn"
    data-testid="icon-Upload"
  >
    <test-file-stub
      image="test-file-stub"
    />
  </div>
  <p
    class="sc-AxjAm pMKRu sc-Axmtr fhTfIi"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Links displayStyle: 6 size: undefined disabled: false 1`] = `
<button
  class="sc-AxgMl fQsMqx"
  size="2"
  type="button"
>
  <p
    class="sc-AxjAm pMKRu sc-Axmtr fhTfIi"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 6 size: undefined disabled: false 2`] = `
<a
  class="sc-AxhUy svlnH"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <div
    class="sc-AxirZ btYaIv sc-AxheI fYsQqs"
    data-testid="icon-Upload"
  >
    <test-file-stub
      image="test-file-stub"
    />
  </div>
  <p
    class="sc-AxjAm pMKRu sc-Axmtr fhTfIi"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Links displayStyle: 7 size: undefined disabled: false 1`] = `
<button
  class="sc-AxgMl iaQuzV"
  size="2"
  type="button"
>
  <p
    class="sc-AxjAm pMKRu sc-Axmtr fhTfIi"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 7 size: undefined disabled: false 2`] = `
<a
  class="sc-AxhUy bfTNar"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <div
    class="sc-AxirZ btYaIv sc-AxheI kuvChn"
    data-testid="icon-Upload"
  >
    <test-file-stub
      image="test-file-stub"
    />
  </div>
  <p
    class="sc-AxjAm pMKRu sc-Axmtr fhTfIi"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Links displayStyle: 8 size: undefined disabled: false 1`] = `
<button
  class="sc-AxgMl cDgXlR"
  size="2"
  type="button"
>
  <p
    class="sc-AxjAm jcsRXt sc-Axmtr fhTfIi"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 8 size: undefined disabled: false 2`] = `
<a
  class="sc-AxhUy gQQyXb"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <div
    class="sc-AxirZ btYaIv sc-AxheI kuvChn"
    data-testid="icon-Upload"
  >
    <test-file-stub
      image="test-file-stub"
    />
  </div>
  <p
    class="sc-AxjAm jcsRXt sc-Axmtr fhTfIi"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Links displayStyle: 9 size: undefined disabled: false 1`] = `
<button
  class="sc-AxgMl dmuWef"
  size="2"
  type="button"
>
  <p
    class="sc-AxjAm eGfSTk sc-Axmtr fhTfIi"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 9 size: undefined disabled: false 2`] = `
<a
  class="sc-AxhUy cCyBop"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <div
    class="sc-AxirZ btYaIv sc-AxheI kuvChn"
    data-testid="icon-Upload"
  >
    <test-file-stub
      image="test-file-stub"
    />
  </div>
  <p
    class="sc-AxjAm eGfSTk sc-Axmtr fhTfIi"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 0 disabled: false 1`] = `
<button
  class="sc-AxgMl jPPCTf"
  type="button"
>
  <p
    class="sc-AxjAm pMKRu sc-Axmtr fhTfIi"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 0 disabled: true 1`] = `
<button
  class="sc-AxgMl jBoIDh"
  disabled=""
  type="button"
>
  <p
    class="sc-AxjAm pMKRu sc-Axmtr fhTfIi"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 1 disabled: false 1`] = `
<button
  class="sc-AxgMl jtvYxe"
  size="1"
  type="button"
>
  <p
    class="sc-AxjAm pMKRu sc-Axmtr fhTfIi"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 1 disabled: true 1`] = `
<button
  class="sc-AxgMl dbHUmc"
  disabled=""
  size="1"
  type="button"
>
  <p
    class="sc-AxjAm pMKRu sc-Axmtr fhTfIi"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 2 disabled: false 1`] = `
<button
  class="sc-AxgMl fvnHkD"
  size="2"
  type="button"
>
  <p
    class="sc-AxjAm pMKRu sc-Axmtr fhTfIi"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 2 disabled: true 1`] = `
<button
  class="sc-AxgMl dbqXdR"
  disabled=""
  size="2"
  type="button"
>
  <p
    class="sc-AxjAm pMKRu sc-Axmtr fhTfIi"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 0 disabled: false 1`] = `
<button
  class="sc-AxgMl exRycH"
  type="button"
>
  <p
    class="sc-AxjAm pMKRu sc-Axmtr fhTfIi"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 0 disabled: true 1`] = `
<button
  class="sc-AxgMl elVQlE"
  disabled=""
  type="button"
>
  <p
    class="sc-AxjAm pMKRu sc-Axmtr fhTfIi"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 1 disabled: false 1`] = `
<button
  class="sc-AxgMl eQudLC"
  size="1"
  type="button"
>
  <p
    class="sc-AxjAm pMKRu sc-Axmtr fhTfIi"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 1 disabled: true 1`] = `
<button
  class="sc-AxgMl bpjYkB"
  disabled=""
  size="1"
  type="button"
>
  <p
    class="sc-AxjAm pMKRu sc-Axmtr fhTfIi"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 2 disabled: false 1`] = `
<button
  class="sc-AxgMl kZNYpP"
  size="2"
  type="button"
>
  <p
    class="sc-AxjAm pMKRu sc-Axmtr fhTfIi"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 2 disabled: true 1`] = `
<button
  class="sc-AxgMl kWEbHI"
  disabled=""
  size="2"
  type="button"
>
  <p
    class="sc-AxjAm pMKRu sc-Axmtr fhTfIi"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 0 disabled: false 1`] = `
<button
  class="sc-AxgMl jPPCTf"
  type="button"
>
  <div
    class="sc-AxirZ btYaIv sc-AxheI kuvChn"
    data-testid="icon-Upload"
  >
    <test-file-stub
      image="test-file-stub"
    />
  </div>
  <p
    class="sc-AxjAm pMKRu sc-Axmtr fhTfIi"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 0 disabled: true 1`] = `
<button
  class="sc-AxgMl jBoIDh"
  disabled=""
  type="button"
>
  <div
    class="sc-AxirZ btYaIv sc-AxheI kuvChn"
    data-testid="icon-Upload"
  >
    <test-file-stub
      image="test-file-stub"
    />
  </div>
  <p
    class="sc-AxjAm pMKRu sc-Axmtr fhTfIi"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 1 disabled: false 1`] = `
<button
  class="sc-AxgMl jtvYxe"
  size="1"
  type="button"
>
  <div
    class="sc-AxirZ btYaIv sc-AxheI kuvChn"
    data-testid="icon-Upload"
  >
    <test-file-stub
      image="test-file-stub"
    />
  </div>
  <p
    class="sc-AxjAm pMKRu sc-Axmtr fhTfIi"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 1 disabled: true 1`] = `
<button
  class="sc-AxgMl dbHUmc"
  disabled=""
  size="1"
  type="button"
>
  <div
    class="sc-AxirZ btYaIv sc-AxheI kuvChn"
    data-testid="icon-Upload"
  >
    <test-file-stub
      image="test-file-stub"
    />
  </div>
  <p
    class="sc-AxjAm pMKRu sc-Axmtr fhTfIi"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 2 disabled: false 1`] = `
<button
  class="sc-AxgMl fvnHkD"
  size="2"
  type="button"
>
  <div
    class="sc-AxirZ btYaIv sc-AxheI kuvChn"
    data-testid="icon-Upload"
  >
    <test-file-stub
      image="test-file-stub"
    />
  </div>
  <p
    class="sc-AxjAm pMKRu sc-Axmtr fhTfIi"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 2 disabled: true 1`] = `
<button
  class="sc-AxgMl dbqXdR"
  disabled=""
  size="2"
  type="button"
>
  <div
    class="sc-AxirZ btYaIv sc-AxheI kuvChn"
    data-testid="icon-Upload"
  >
    <test-file-stub
      image="test-file-stub"
    />
  </div>
  <p
    class="sc-AxjAm pMKRu sc-Axmtr fhTfIi"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 0 disabled: false 1`] = `
<button
  class="sc-AxgMl exRycH"
  type="button"
>
  <div
    class="sc-AxirZ btYaIv sc-AxheI kuvChn"
    data-testid="icon-Upload"
  >
    <test-file-stub
      image="test-file-stub"
    />
  </div>
  <p
    class="sc-AxjAm pMKRu sc-Axmtr fhTfIi"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 0 disabled: true 1`] = `
<button
  class="sc-AxgMl elVQlE"
  disabled=""
  type="button"
>
  <div
    class="sc-AxirZ btYaIv sc-AxheI kuvChn"
    data-testid="icon-Upload"
  >
    <test-file-stub
      image="test-file-stub"
    />
  </div>
  <p
    class="sc-AxjAm pMKRu sc-Axmtr fhTfIi"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 1 disabled: false 1`] = `
<button
  class="sc-AxgMl eQudLC"
  size="1"
  type="button"
>
  <div
    class="sc-AxirZ btYaIv sc-AxheI kuvChn"
    data-testid="icon-Upload"
  >
    <test-file-stub
      image="test-file-stub"
    />
  </div>
  <p
    class="sc-AxjAm pMKRu sc-Axmtr fhTfIi"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 1 disabled: true 1`] = `
<button
  class="sc-AxgMl bpjYkB"
  disabled=""
  size="1"
  type="button"
>
  <div
    class="sc-AxirZ btYaIv sc-AxheI kuvChn"
    data-testid="icon-Upload"
  >
    <test-file-stub
      image="test-file-stub"
    />
  </div>
  <p
    class="sc-AxjAm pMKRu sc-Axmtr fhTfIi"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 2 disabled: false 1`] = `
<button
  class="sc-AxgMl kZNYpP"
  size="2"
  type="button"
>
  <div
    class="sc-AxirZ btYaIv sc-AxheI kuvChn"
    data-testid="icon-Upload"
  >
    <test-file-stub
      image="test-file-stub"
    />
  </div>
  <p
    class="sc-AxjAm pMKRu sc-Axmtr fhTfIi"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 2 disabled: true 1`] = `
<button
  class="sc-AxgMl kWEbHI"
  disabled=""
  size="2"
  type="button"
>
  <div
    class="sc-AxirZ btYaIv sc-AxheI kuvChn"
    data-testid="icon-Upload"
  >
    <test-file-stub
      image="test-file-stub"
    />
  </div>
  <p
    class="sc-AxjAm pMKRu sc-Axmtr fhTfIi"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots With intl message displayStyle: 0 size: 2 disabled: false 1`] = `
<button
  class="sc-AxgMl fvnHkD"
  size="2"
  type="button"
>
  <p
    class="sc-AxjAm pMKRu sc-Axmtr fhTfIi"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots With intl message displayStyle: 0 size: 2 disabled: false 2`] = `
<button
  class="sc-AxgMl fvnHkD"
  size="2"
  type="button"
>
  <p
    class="sc-AxjAm pMKRu sc-Axmtr fhTfIi"
  >
    Mudita News
  </p>
</button>
`;
